fixed add button alignment

--- a/task-management-system/imports/ui/components/general/texts/text.css
+++ b/task-management-system/imports/ui/components/general/texts/text.css
@@ -24,7 +24,7 @@
 }
 
 .team-padding {
-    margin-top: 20px;
+    margin-top: 15px;
     margin-right: 30px;
 
 }
